      the actual exit point
    - inhibit kscreenlocker while the UI is up to prevent the lock screen
      from breaking during upgrades and then complain to the user

  [ Brian Murray ]
  * DistUpgradeQuirks.py: add a quirk which checks for an apt architecture
    of i386 and prevents the upgrade as the architecture may be dropped.

 -- Harald Sitter <sitter@kde.org>  Wed, 29 Aug 2018 14:03:55 +0200

ubuntu-release-upgrader (1:18.10.9) cosmic; urgency=medium

  * data/release-upgrades: set Prompt to normal not lts
  * DistUpgradeQuirks.py: if ubuntu-desktop or snapd isn't in the package
    cache don't try and run the quirk for installing or upgrading snaps.
    (LP: #1787668)
  * DistUpgradeQuirks.py: Only refresh installed snaps to the ubuntu-18.10
    channel if they are tracking the ubuntu-18.04 channel. (LP: #1748581)

 -- Brian Murray <brian@ubuntu.com>  Tue, 28 Aug 2018 13:09:55 -0700

ubuntu-release-upgrader (1:18.10.8) cosmic; urgency=medium

  * DistUpgradeController.py: Remove an unnecessary debugging entry when
    calculating the debs to remove.
  * DistUpgradeQuirks.py: Either refresh installed snaps so they use the
    ubuntu-18.10 channel or install snaps that weren'd installed when
    upgrading to Ubuntu 18.04. (LP: #1748581)

 -- Brian Murray <brian@ubuntu.com>  Tue, 14 Aug 2018 16:00:44 -0700

ubuntu-release-upgrader (1:18.10.7) cosmic; urgency=medium

  * Upgrade libc6 before other packages to work around trigger issues
    (LP: #1766890)

 -- Julian Andres Klode <juliank@ubuntu.com>  Tue, 07 Aug 2018 23:01:50 +0200

ubuntu-release-upgrader (1:18.10.6) cosmic; urgency=medium

  * DistUpgradeQuirks.py:
    - make sure that snapd is installed before trying to use it.
      (LP: #1783589)
    - update the view with information regarding the progress of snaps being
      installed. (LP: #1783593)
    - when checking for connectivity to the snap store use C.UTF-8 for the
      language so error message matching works. (LP: #1783738)